--- a/frontend/src/app/core/components/navbar/navbar.component.html
+++ b/frontend/src/app/core/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-white border-bottom">
     <div class="container-fluid container">
-      <a class="navbar-brand fw-bold fs-3" href="#">SHOPPERS </a>
+      <a class="navbar-brand fw-bold fs-3" [routerLink]="''">SHOPPERS </a>
       <button class="navbar-toggler" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -23,11 +23,11 @@
                 <i class="fa-regular fa-user"></i> User <i class="fa-solid fa-angle-down"></i>
             </a>
             <ul class="dropdown-menu drop-menu border-0  shadow-lg" aria-labelledby="navbarDropdown" ngbDropdownMenu>
-                <li><a class="dropdown-item primary-text" [routerLink]="'/login'"><i class="fa fa-user text-muted menu-icon"></i> <span class="side-text">Login</span></a></li>
-                <li><a class="dropdown-item secondary-text" href="#"><i class="fa-solid text-muted fa-address-book menu-icon"></i> <span class="side-text">Sign Up</span></a></li>
+                <li *ngIf="!auth.isLoggedIn()"><a class="dropdown-item primary-text" [routerLink]="'/login'"><i class="fa fa-user text-muted menu-icon"></i> <span class="side-text">Login</span></a></li>
+                <li *ngIf="!auth.isLoggedIn()"> <a class="dropdown-item secondary-text" href="#"><i class="fa-solid text-muted fa-address-book menu-icon"></i> <span class="side-text">Sign Up</span></a></li>
                 <li><a class="dropdown-item" href="#"><i class="fa-solid fa-list-ul menu-icon text-muted"></i> <span class="side-text">My Orders</span></a></li>
-                <hr class="m-2">
-                <li><a class="dropdown-item" ><i class="fa-solid fa-arrow-right-from-bracket menu-icon text-muted"></i> <span class="side-text">Logout</span> </a></li>
+                <hr class="m-2" *ngIf="auth.isLoggedIn()">
+                <li *ngIf="auth.isLoggedIn()"><a class="dropdown-item" ><i class="fa-solid fa-arrow-right-from-bracket menu-icon text-muted"></i> <span class="side-text" (click)="signOut()">Logout</span> </a></li>
             </ul>
           </li>
         </ul>
