--- a/frontend/src/app/core/components/navbar/navbar.component.html
+++ b/frontend/src/app/core/components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
             </a>
             <ul class="dropdown-menu drop-menu border-0  shadow-lg" aria-labelledby="navbarDropdown" ngbDropdownMenu>
                 <li *ngIf="!auth.isLoggedIn()"><a class="dropdown-item primary-text" [routerLink]="'/login'"><i class="fa fa-user text-muted menu-icon"></i> <span class="side-text">Login</span></a></li>
-                <li *ngIf="!auth.isLoggedIn()"> <a class="dropdown-item secondary-text" href="#"><i class="fa-solid text-muted fa-address-book menu-icon"></i> <span class="side-text">Sign Up</span></a></li>
+                <li *ngIf="!auth.isLoggedIn()"> <a class="dropdown-item secondary-text" [routerLink]="'/sign-up'"><i class="fa-solid text-muted fa-address-book menu-icon"></i> <span class="side-text">Sign Up</span></a></li>
                 <li><a class="dropdown-item" href="#"><i class="fa-solid fa-list-ul menu-icon text-muted"></i> <span class="side-text">My Orders</span></a></li>
                 <hr class="m-2" *ngIf="auth.isLoggedIn()">
                 <li *ngIf="auth.isLoggedIn()"><a class="dropdown-item" ><i class="fa-solid fa-arrow-right-from-bracket menu-icon text-muted"></i> <span class="side-text" (click)="signOut()">Logout</span> </a></li>
