--- a/frontend/src/app/features/auth/login/login.component.html
+++ b/frontend/src/app/features/auth/login/login.component.html
@@ -27,6 +27,9 @@
                         </div>
                         <button class="btn primary-btn mt-4 w-100 btn-block btn-lg" type="submit" [disabled]="loginForm.invalid">Submit</button>
                     </form>
+                    <div class="text-center mt-3">
+                        <a class="secondary-text" [routerLink]="'/forgot-password'"> Forgot Password ?</a>
+                    </div>
                 </div>
             </div>
         </div>
