--- a/frontend/src/app/core/components/navbar/navbar.component.html
+++ b/frontend/src/app/core/components/navbar/navbar.component.html
@@ -20,12 +20,13 @@
           </li>
           <li class="nav-item dropdown" ngbDropdown>
             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" ngbDropdownToggle>
-                <i class="fa-regular fa-user"></i> User <i class="fa-solid fa-angle-down"></i>
+              <i class="fa-regular fa-user"></i> {{ user?.firstName || user?.email || 'User' }} <i class="fa-solid fa-angle-down"></i>
             </a>
-            <ul class="dropdown-menu drop-menu border-0  shadow-lg" aria-labelledby="navbarDropdown" ngbDropdownMenu>
+            <ul class="dropdown-menu border-0  shadow-lg" aria-labelledby="navbarDropdown" ngbDropdownMenu>
                 <li *ngIf="!auth.isLoggedIn()"><a class="dropdown-item primary-text" [routerLink]="'/login'"><i class="fa fa-user text-muted menu-icon"></i> <span class="side-text">Login</span></a></li>
                 <li *ngIf="!auth.isLoggedIn()"> <a class="dropdown-item secondary-text" [routerLink]="'/sign-up'"><i class="fa-solid text-muted fa-address-book menu-icon"></i> <span class="side-text">Sign Up</span></a></li>
-                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-list-ul menu-icon text-muted"></i> <span class="side-text">My Orders</span></a></li>
+                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-list-ul menu-icon text-muted"></i> <span class="side-text">Orders</span></a></li>
+                <li><a class="dropdown-item" [routerLink]="'/profile'"><i class="fa-solid fa-user menu-icon text-muted"></i> <span class="side-text">Profile</span></a></li>
                 <hr class="m-2" *ngIf="auth.isLoggedIn()">
                 <li *ngIf="auth.isLoggedIn()"><a class="dropdown-item" ><i class="fa-solid fa-arrow-right-from-bracket menu-icon text-muted"></i> <span class="side-text" (click)="signOut()">Logout</span> </a></li>
             </ul>
