--- a/frontend/src/app/core/components/navbar/navbar.component.html
+++ b/frontend/src/app/core/components/navbar/navbar.component.html
@@ -20,8 +20,9 @@
           </li>
           <li class="nav-item dropdown" ngbDropdown>
             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" ngbDropdownToggle>
-              <i class="fa-regular fa-user"></i> {{ user?.firstName || user?.email || 'User' }} <i class="fa-solid fa-angle-down"></i>
-            </a>
+              <i class="fa-regular fa-user"></i> 
+              {{ (user$ | async)?.firstName || (user$ | async)?.email || 'User' }} 
+              <i class="fa-solid fa-angle-down"></i>            </a>
             <ul class="dropdown-menu border-0  shadow-lg" aria-labelledby="navbarDropdown" ngbDropdownMenu>
                 <li *ngIf="!auth.isLoggedIn()"><a class="dropdown-item primary-text" [routerLink]="'/login'"><i class="fa fa-user text-muted menu-icon"></i> <span class="side-text">Login</span></a></li>
                 <li *ngIf="!auth.isLoggedIn()"> <a class="dropdown-item secondary-text" [routerLink]="'/sign-up'"><i class="fa-solid text-muted fa-address-book menu-icon"></i> <span class="side-text">Sign Up</span></a></li>
