--- a/frontend/src/app/features/profile/profile.component.html
+++ b/frontend/src/app/features/profile/profile.component.html
@@ -8,7 +8,7 @@
                          class="img-fluid rounded-pill" alt="profile image" width="50px">
                          <div class="container">
                             <div class="fs-12">Hello</div>
-                            <div class="card-title mb-0 fw-semibold">Hardik Singh</div>
+                            <div class="card-title mb-0 fw-semibold">{{ (user$ | async)?.firstName + ' ' + (user$ | async)?.lastName || (user$ | async)?.email || 'Guest User' }}</div>
                          </div>
                     </div>
                 </div>
