--- a/frontend/src/app/features/profile/profile.component.html
+++ b/frontend/src/app/features/profile/profile.component.html
@@ -48,6 +48,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5>Manage Addresses</h5>
+                            <app-addnew-address></app-addnew-address>
                         </div>
                     </div>
                   </div>
