--- a/frontend/src/app/features/user/user-address/addresses/addresses.component.html
+++ b/frontend/src/app/features/user/user-address/addresses/addresses.component.html
@@ -1,9 +1,9 @@
 <h6 class="mt-5">Addresses :</h6>
-<div *ngIf="user$ | async as user">
-    <div *ngIf="user.addresses.length === 0" class="text-center mt-3">
+<div >
+    <div *ngIf="addresses.length === 0" class="text-center mt-3">
         No Address added Yet
     </div>
-    <div class="card border my-3 mx-2" *ngFor="let address of user.addresses">
+    <div class="card border my-3 mx-2" *ngFor="let address of addresses">
         <div class="card-body d-flex align-items-start justify-content-between" >
             <div>
                 <h6>{{ address.addressName }}</h6>
