--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -29,6 +29,10 @@ a{
     cursor: pointer;
 }
 
+.border-primary{
+    border-color: var(--primary-color) !important;
+}
+
 .form-control{
     box-shadow: none !important;
     height: 50px;
