--- a/frontend/src/app/features/dashboard/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/dashboard.component.html
@@ -1,5 +1,3 @@
-<div class="container">
-    <p>dashboard works!</p>
-
+<div class="container mt-5">
     <app-product-list></app-product-list>
 </div>
