--- a/frontend/src/app/features/products/product-details/product-details.component.html
+++ b/frontend/src/app/features/products/product-details/product-details.component.html
@@ -14,7 +14,7 @@
             </span>
             <br>
             <div class="my-3 text-nowrap">
-                <button class="btn btn-lg me-2 primary-btn rounded-0">Add To Cart</button>
+                <button class="btn btn-lg me-2 primary-btn rounded-0" (click)="addCartProduct(product._id)">Add To Cart</button>
                 <button class="btn btn-lg border-primary primary-text rounded-0">Buy Now</button>
             </div>
 
