--- a/frontend/src/app/core/components/navbar/navbar.component.html
+++ b/frontend/src/app/core/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
         </ul>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item me-2">
-            <a class="nav-link text-nowrap" aria-current="page" href="#"><i class="fa-solid fa-cart-shopping"></i> Cart</a>
+            <a class="nav-link text-nowrap" aria-current="page" [routerLink]="'/cart'"><i class="fa-solid fa-cart-shopping"></i> Cart</a>
           </li>
           <li class="nav-item dropdown" ngbDropdown>
             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" ngbDropdownToggle>
