--- a/frontend/src/app/features/cart/cart-page/cart-page.component.html
+++ b/frontend/src/app/features/cart/cart-page/cart-page.component.html
@@ -10,7 +10,7 @@
                             <p class="mb-1">{{ item.productId.description }}</p>
                             <p class="fw-semibold">{{ item.productId.brand }}</p>
                             <h4 class="fw-semibold">$ {{ item.productId.price }}</h4>
-                            <button class="btn border btn-sm" (click)="removeItem( item.productId._id )">Remove</button>
+                            <button class="btn border btn-sm" (click)="removeItem( item.productId._id )"><i class="fa fa-bin"></i> Remove</button>
                         </div>
                     </div>
                 </div>
@@ -21,6 +21,14 @@
                 <div class="card-body">
                     
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-8">
+        <div class="text-nowrap card">
+            <div class="card-body">
+                <button class="btn float-end primary-btn" >Check Out</button>
+                <button class="btn float-end border-primary primary-text me-2" (click)="ClearCart()"><i class="fa fa-bin"></i> Clear Cart</button>
             </div>
         </div>
     </div>
