--- a/frontend/src/app/features/profile/profile.component.html
+++ b/frontend/src/app/features/profile/profile.component.html
@@ -49,6 +49,7 @@
                         <div class="card-body">
                             <h5>Manage Addresses</h5>
                             <app-addnew-address></app-addnew-address>
+                            <app-addresses></app-addresses>
                         </div>
                     </div>
                   </div>
