--- a/frontend/src/app/features/order/place-order/place-order.component.html
+++ b/frontend/src/app/features/order/place-order/place-order.component.html
@@ -1,4 +1,103 @@
-<div class="container">
-    <p>place-order works!</p>
-    
-</div>
+<div class="container mt-5">
+    <div class="row">
+      <div class="col-md-10 offset-md-1">
+        <!-- Step 1: Shipping Address -->
+        <div class="card mb-3" [ngClass]="{'border-primary': currentStep === 1}">
+          <div class="card-header d-flex justify-content-between align-items-center" 
+               style="cursor: pointer;" 
+               (click)="currentStep = 1">
+            <div>
+              <span class="badge bg-primary me-2">1</span>
+              <strong>Shipping Address</strong>
+            </div>
+          </div>
+          <div class="card-body" *ngIf="currentStep === 1">
+            <!-- SELECT ADDRESS RADIO -->
+            <label class="card m-2" *ngFor="let address of addresses">
+                <div class="card-body d-flex">
+                    <div class="form-group me-3">
+                        <input
+                            type="radio"
+                            name="address"
+                            [value]="address._id"
+                            (change)="onAddressChange(address._id)"
+                        />
+                    </div>
+                    <div>
+                        <h6>{{ address.addressName }}</h6>
+                            {{ address.street }} <br>
+                            {{ address.state }}, {{ address.city }}
+                            {{ address.country }}, {{ address.zipCode }}
+                    </div>
+                </div>
+            </label>
+            <app-addnew-address></app-addnew-address>
+            <div class="d-flex justify-content-end">
+              <button class="btn btn-primary" (click)="currentStep = 2">Next</button>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Step 2: Review Order -->
+        <div class="card mb-3" [ngClass]="{'border-primary': currentStep === 2}">
+          <div class="card-header d-flex justify-content-between align-items-center" 
+              style="cursor: pointer;" 
+              (click)="currentStep = 2">
+            <div>
+              <span class="badge bg-primary me-2">3</span>
+              <strong>Review Order</strong>
+            </div>
+          </div>
+          <div class="card-body" *ngIf="currentStep === 2">
+              <div class="row">
+                <div class="col-xl-12"  *ngFor="let item of cartItems">
+                  <div class="card mb-3">
+                    <div class="card-body">
+                        <div class="d-flex align-items-start justify-content-start">
+                            <img src="{{ item.productId.image }}" class="rounded-2 me-3" width="200px" height="200px">
+                            <div>
+                                <h3>{{ item.productId.name }}</h3>
+                                <p class="mb-1">{{ item.productId.description }}</p>
+                                <p class="fw-semibold">{{ item.productId.brand }}</p>
+                                <p>Quantity : {{ item.quantity }}</p>
+                                <h4 class="fw-semibold">$ {{ item.productId.price }}</h4>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            <div class="d-flex justify-content-between">
+              <button class="btn btn-secondary" (click)="currentStep = 2">Previous</button>
+              <button class="btn btn-primary" (click)="currentStep = 3">Next</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Step 2: Payment Details -->
+        <div class="card mb-3" [ngClass]="{'border-primary': currentStep === 3}">
+          <div class="card-header d-flex justify-content-between align-items-center" 
+               style="cursor: pointer;" 
+               (click)="currentStep = 3">
+            <div>
+              <span class="badge bg-primary me-2">2</span>
+              <strong>Payment Details</strong>
+            </div>
+          </div>
+          <div class="card-body" *ngIf="currentStep === 3">
+            <p class="card-text">
+              Enter your payment information here.
+            </p>
+            <div class="d-flex justify-content-between">
+              <button class="btn btn-secondary" (click)="currentStep = 1">Previous</button>
+              <button class="btn primary-btn" (click)="confirmOrder()">Confirm Order</button>
+            </div>
+          </div>
+        </div>
+  
+       
+  
+      </div>
+    </div>
+  </div>
+  
