--- a/frontend/src/app/features/order/place-order/place-order.component.html
+++ b/frontend/src/app/features/order/place-order/place-order.component.html
@@ -60,7 +60,7 @@
                                 <p class="mb-1">{{ item.productId.description }}</p>
                                 <p class="fw-semibold">{{ item.productId.brand }}</p>
                                 <p>Quantity : {{ item.quantity }}</p>
-                                <h4 class="fw-semibold">$ {{ item.productId.price }}</h4>
+                                <h4 class="fw-semibold"><i class="fa-solid fa-indian-rupee-sign"></i> {{ item.productId.price }}</h4>
                             </div>
                         </div>
                     </div>
