--- a/frontend/src/app/features/auth/login/login.component.html
+++ b/frontend/src/app/features/auth/login/login.component.html
@@ -3,7 +3,8 @@
         <div class="col-6">
             <div class="card">
                 <div class="card-body p-5 px-6">
-                    <h4 class="primary-text text-center">Login In Here</h4>
+                    <h4 class="primary-text text-center">Login In</h4>
+                    <p class="text-secondary text-center">New Here? <a class="secondary-text text-decoration-none fw-semibold" [routerLink]="'/sign-up'">Create an account.</a></p>
                     <form class="form-group mt-5" [formGroup]="loginForm"   (ngSubmit)="onSubmit()">
                         <div class="form-group">
                             <label class="form-label">Email</label>
