--- a/frontend/src/app/core/components/navbar/navbar.component.html
+++ b/frontend/src/app/core/components/navbar/navbar.component.html
@@ -26,7 +26,7 @@
             <ul class="dropdown-menu border-0  shadow-lg" aria-labelledby="navbarDropdown" ngbDropdownMenu>
                 <li *ngIf="!auth.isLoggedIn()"><a class="dropdown-item primary-text" [routerLink]="'/login'"><i class="fa fa-user text-muted menu-icon"></i> <span class="side-text">Login</span></a></li>
                 <li *ngIf="!auth.isLoggedIn()"> <a class="dropdown-item secondary-text" [routerLink]="'/sign-up'"><i class="fa-solid text-muted fa-address-book menu-icon"></i> <span class="side-text">Sign Up</span></a></li>
-                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-list-ul menu-icon text-muted"></i> <span class="side-text">Orders</span></a></li>
+                <li><a class="dropdown-item" [routerLink]="'/order-list'"><i class="fa-solid fa-list-ul menu-icon text-muted"></i> <span class="side-text">Orders</span></a></li>
                 <li><a class="dropdown-item" [routerLink]="'/profile'" *ngIf="auth.isLoggedIn()"><i class="fa-solid fa-user menu-icon text-muted"></i> <span class="side-text">Profile</span></a></li>
                 <hr class="m-2" *ngIf="auth.isLoggedIn()">
                 <li *ngIf="auth.isLoggedIn()"><a class="dropdown-item" ><i class="fa-solid fa-arrow-right-from-bracket menu-icon text-muted"></i> <span class="side-text" (click)="signOut()">Logout</span> </a></li>
