place order & order confirmed

--- a/frontend/src/app/core/components/navbar/navbar.component.html
+++ b/frontend/src/app/core/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-white border-bottom">
     <div class="container-fluid container">
-      <a class="navbar-brand fw-bold fs-3" [routerLink]="''">SHOPPERS </a>
+      <a class="navbar-brand fw-bold fs-3" [routerLink]="''">
+        <img src="assets/S.png" width="40px" class="rounded-2"> <span class="ms-1">HOPPERS</span> </a>
       <button class="navbar-toggler" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed">
         <span class="navbar-toggler-icon"></span>
       </button>
