--- a/frontend/src/app/features/reviews/add-review/add-review.component.html
+++ b/frontend/src/app/features/reviews/add-review/add-review.component.html
@@ -1,4 +1,4 @@
-<button class="btn border-secondary btn-block w-100 secondary-text" (click)="toggleBox()"><i class="fa fa-plus"></i> Add a review</button>
+<button class="btn border-secondary  secondary-text" (click)="toggleBox()"><i class="fa fa-plus"></i> Add a review</button>
 
 <div class="form-group my-3" *ngIf="showTextbox">
     <div class="d-flex align-items-center">
