--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -144,6 +144,14 @@ a{
     font-size: 12px !important;
 }
 
+.fs-18{
+    font-size: 18px !important;
+}
+
+.fs-20{
+    font-size: 20px !important;
+}
+
 /* Cart */
 
 .cart-footer{
